# TDS_2025

./: .gitignore  Auth-test.py  TDS_ROE.py  base.json  branch_a.json  branch_b.json  copilot-tool.py  copilot_output.py  email.json  html_to_markdown.html  index.html  last_check_date  main.py  network_graph.csv  pdf_scraping.py  pdf_to_markdown.py  playwright-test.py  pyproject.toml  q-datasette-facet-revenue.db  q-datasette-facet-revenue.sql  q-duckdb-sku-benchmark-shipments.csv  q-duckdb-sku-benchmark-sku_master.csv  q-editor-incident-tags.txt  q-excel-linear-forecast.csv  q-excel-multivariate-regression.csv  q-excel-region-correlation.csv  q-excel-zscore-outlier.csv  q-fastapi.csv  q-geospatial-excel-gap.csv  q-geospatial-python-proximity.csv  q-geospatial-qgis-buffer-area.geojson  q-json-customer-flatten.jsonl  q-json-sensor-rollup.jsonl  q-network-python-centrality.csv  q-openrefine-supplier-spend.csv  q-pdf-to-markdown.md  q-python-channel-conversion.csv  q-python-cohort-retention.csv  q-sql-enterprise-margin.db  q-sql-enterprise-margin.sql  (+18 more)
.devcontainer/: devcontainer.json
.github/: roe.yml
.github/workflows/: action.yml  pytest.yml
generated-code/quiz-app/: README.md  index.html  script.js  style.css
src/streak_project.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_streak.py
