[project]
name = "tds-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.120.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
    "wikipedia>=1.4.0",
]
